Wurtzite is working

--- a/bin/Dockerfile
+++ b/bin/Dockerfile
@@ -1,6 +1,6 @@
-FROM node:8.11.4
+FROM node:10.15.3
 
 RUN mkdir -p /var/www
-COPY . /var/www
+COPY ./dist /var/www
 WORKDIR /var/www
 RUN npm install
