--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "wurtzite",
   "version": "1.0.0",
   "description": "Simple & Solid foundation 4 Node.ts projects",
-  "main": "index.ts",
+  "main": "dist/bin/server.js",
   "scripts": {
     "build": "tsc",
-    "serve": "nodemon dist",
-    "dev": "tsc --watch & nodemon dist"
+    "staging": "NODE_ENV=staging nodemon dist/bin/server.js",
+    "live": "NODE_ENV=live nodemon dist/bin/server.js",
+    "dev": "NODE_ENV=development rimraf dist & tsc --watch & nodemon dist/bin/server.js",
+    "gen:barrels": "barrelsby -d src -l below --delete -q",
+    "mig:add": "typeorm migration:create -n",
+    "mig:run": "typeorm migration:run",
+    "mig:back": "typeorm migration:revert"
   },
   "repository": {
     "type": "git",
@@ -26,13 +31,31 @@
   },
   "homepage": "https://github.com/davidcp90/wurtzite#readme",
   "devDependencies": {
+    "@types/debug": "^4.1.3",
+    "@types/express": "^4.16.1",
+    "@types/morgan": "^1.7.35",
+    "@types/nconf": "^0.10.0",
+    "barrelsby": "^2.0.0",
     "nodemon": "^1.18.10",
+    "rimraf": "^2.6.3",
     "tslint": "^5.14.0",
     "typescript": "^3.4.1"
   },
   "dependencies": {
-    "@types/express": "^4.16.1",
+    "@google-cloud/error-reporting": "^0.6.1",
+    "@mercadoni/elementals": "git://github.com/mercadoni/elementals.git#0.3.0",
+    "@overnightjs/core": "^1.4.2",
+    "body-parser": "^1.18.3",
+    "cluster": "^0.7.7",
+    "colors": "^1.3.3",
+    "debug": "^4.1.1",
     "express": "^4.16.4",
-    "@mercadoni/elementals": "git://github.com/mercadoni/elementals.git#0.3.0"
+    "express-prom-bundle": "^5.1.0",
+    "morgan": "^1.9.1",
+    "nconf": "^0.10.0",
+    "pg": "^7.9.0",
+    "prom-client": "^11.3.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.16"
   }
 }
