--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,19 @@
  "compilerOptions": {
   "module": "commonjs",
   "esModuleInterop": true,
-  "target": "es6",
+  "target": "es5",
   "noImplicitAny": true,
   "moduleResolution": "node",
+  "emitDecoratorMetadata": true,
+  "experimentalDecorators": true,
   "sourceMap": true,
-  "outDir": "dist",
+  "outDir": "./dist",
+  "allowSyntheticDefaultImports": true,
   "baseUrl": ".",
-  "paths": {
-   "*": [
-    "node_modules/*",
-    "src/types/*"
-   ]
-  },
+  "typeRoots": [
+   "./@types",
+   "./node_modules/@types"
+  ],
   "lib": [
    "es2015"
   ]
@@ -21,6 +22,15 @@
  "include": [
   "src/**/*",
   "bin/**/*",
+  "database/**/*",
   "test/**/*"
+ ],
+ "exclude": [
+    "**/node_modules/"
+ ],
+ "plugins": [
+   {
+    "name": "typescript-tslint-plugin"
+   }
  ]
 }
